# kubevirt

./: go.mod  go.sum
automation/: test.sh
cmd/subresource-access-test/: subresource-access-test.go
pkg/instancetype/: BUILD.bazel  instancetype.go
pkg/virt-api/rest/: authorizer.go  expand_test.go
pkg/virt-api/webhooks/validating-webhook/admitters/: BUILD.bazel  vms-admitter_test.go
pkg/virt-controller/watch/: BUILD.bazel  vm_test.go
pkg/virt-operator/resource/generate/rbac/: cluster.go
pkg/virtctl/: BUILD.bazel  root.go
pkg/virtctl/cdexport/: BUILD.bazel  cdexport.go
pkg/virtctl/create/: create.go  params.go  vm.go  vm_test.go
pkg/virtctl/create/params/: params.go
pkg/virtctl/scp/: BUILD.bazel  native.go  scp.go
pkg/virtctl/ssh/: BUILD.bazel  ssh.go  wrapped.go
pkg/virtctl/vmexport/: vmexport.go
tests/: BUILD.bazel  subresource_api_test.go  vm_test.go  vmi_vsock_test.go
tests/decorators/: decorators.go
tests/framework/matcher/: BUILD.bazel  created.go  created_test.go  field.go  field_test.go  ready.go  ready_test.go  restarted.go  restarted_test.go  statechangerequests.go  statechangerequests_test.go
tests/libvmi/: BUILD.bazel
tests/testsuite/: serviceaccount.go
tests/virtctl/: create_vm.go  scp.go  ssh.go
