load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["cdexport.go"],
    importpath = "kubevirt.io/kubevirt/pkg/virtctl/cdexport",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/virtctl/templates:go_default_library",
        "//pkg/virtctl/vmexport:go_default_library",
        "//staging/src/kubevirt.io/api/core/v1:go_default_library",
        "//staging/src/kubevirt.io/api/export/v1alpha1:go_default_library",
        "//staging/src/kubevirt.io/client-go/kubecli:go_default_library",
        "//vendor/github.com/google/go-containerregistry/pkg/crane:go_default_library",
        "//vendor/github.com/google/go-containerregistry/pkg/v1:go_default_library",
        "//vendor/github.com/google/go-containerregistry/pkg/v1/empty:go_default_library",
        "//vendor/github.com/google/go-containerregistry/pkg/v1/mutate:go_default_library",
        "//vendor/github.com/google/go-containerregistry/pkg/v1/tarball:go_default_library",
        "//vendor/github.com/google/go-containerregistry/pkg/v1/types:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/client-go/tools/clientcmd:go_default_library",
        "//vendor/sigs.k8s.io/yaml:go_default_library",
    ],
)
